Edit text on page

--- a/index.html
+++ b/index.html
@@ -90,14 +90,16 @@
                                         <h2><a target="_blank" href="https://bitcointalk.org/index.php?topic=1605453.0">Bitcointalk</a></h2>
                                     </div>
                                 </div>
-                                <div class="content col-xs-12"><p>FLASH is designed for small payments, due to its low transaction fees, high speed, and throughput, all while retaining its BTC/LTC heritage and functionality.  This makes FLASH ideal for loyalty, registration and messaging applications, and is perfect for customers and businesses using small payments.  We know efficiency is vessential for most transactions, so we benchmarked FLASH up to 25,000 txn/sec on a $700 i7 computer consuming less than 80 watts of power.  Because of this, FLASH is eco-friendly and easy on your pocketbook.</p></div>
-                                <ul>
-                                    <li><p>The number of coins is fixed and completely issued.</p></li>
-                                    <li><p>There is zero inflation.</p></li>
-                                    <li><p>Processing is optimized and tested for efficiency and high volume.</p></li>
-                                    <li><p>There is no developer “slush fund”.</p></li>
-                                    <li><p>Projects can be developed by anyone and donations for the developers solicited from the community.</p></li>
-                                </ul>
+                                <div class="content col-xs-12"><p>FLASH is designed for small payments, due to its low transaction fees, high speed, and throughput, all while retaining its BTC/LTC heritage and functionality.  This makes FLASH ideal for loyalty, registration and messaging applications, and is perfect for customers and businesses using small payments.  We know efficiency is essential for most transactions, so we benchmarked FLASH up to 25,000 txn/sec on a $700 i7 computer consuming less than 80 watts of power.  Because of this, FLASH is eco-friendly and easy on your pocketbook.</p></div>
+                                <div class="col-xs-12">
+                                    <ul>
+                                        <li><p>The number of coins is fixed and completely issued.</p></li>
+                                        <li><p>There is zero inflation.</p></li>
+                                        <li><p>Processing is optimized and tested for efficiency and high volume.</p></li>
+                                        <li><p>There is no developer “slush fund”.</p></li>
+                                        <li><p>Projects can be developed by anyone and donations for the developers solicited from the community.</p></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                         <div class="slide-4">
