--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FLASH Wallet</title>
-        <link rel="shortcut icon" href="images/favicon.png" title="Favicon">
+        <link rel="shortcut icon" href="images/favicon.ico" title="Favicon">
         <link rel="dns-prefetch" href="//s.w.org">
         <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
