--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html ng-app="flashcoin">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,14 @@
         <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+        <script type="text/javascript" src="flashcoin.js"></script>
     </head>
     <body>
         <div class="wrap">
             <div class="home-page flash-wallet">
                 <header class="header">
-                    <div class="container">
+                    <div class="container" ng-controller="Flashcoin">
                         <div class="col-xs-12">
                             <div class="col-xs-6 logo">
                                 <a href="https://wallet.flashcoin.io/"><img src="images/flash-wallet.png" /></a>
@@ -33,18 +36,18 @@
                                         <h4>Transactions 24h</h4>
                                         <div class="col-xs-12 form-group">
                                             <div class="input-group form-group col-xs-12 col-sm-6 pull-left">
-                                                <input class="form-control" type="text" placeholder="Total Txn Value 24h" value=""/>
-                                                <span class="input-group-addon">FLASH</span>
+                                                <input class="form-control" type="text" placeholder="Total 24h" value="{{total_txns}}"/>
+                                                <span class="input-group-addon">TXNS</span>
                                             </div>
                                             <div class="input-group form-group col-xs-12 col-sm-6 pull-left">
-                                                <input class="form-control" type="text" placeholder="Ave Txn Time" value=""/>
+                                                <input class="form-control" type="text" placeholder="Ave Txn Time" value="{{ave_txn}}"/>
                                                 <span class="input-group-addon">sec</span>
                                             </div>
                                         </div>
 
                                         <h4>Circulating Supply:  900 million</h4>
                                         <div class="input-group form-group">
-                                            <input class="form-control" type="text" placeholder="Market Price" value=""/>
+                                            <input class="form-control" type="text" placeholder="Market Price" value="{{market_price}}"/>
                                             <span class="input-group-addon">satoshis</span>
                                         </div>
                                     </form>
