--- a/wallet.html
+++ b/wallet.html
@@ -15,7 +15,6 @@
     <body>
         <div class="wrap">
             <div class="home-page flash-wallet">
-                <p class="link-flash"><a href="https://wallet.flashcoin.io/">FLASH Web Wallet</a></p>
                 <header class="header">
                     <div class="container" ng-controller="Flashcoin">
                         <div class="col-xs-12">
@@ -28,30 +27,20 @@
                         </div>
                         <div class="col-xs-12 col-sm-7 text-center pad0 pull-right" id="content-slide1">
                             <div class="performation">
-                                <h2 style="font-size: 35px;">Key Performance Indicators</h2>
+                                <h2 style="font-size: 35px;">Get a Web Wallet</h2>
                                 <div class="box-performation" id="box-performation">
                                     <form class="">
                                         <div class="form-group">
-                                            <input class="form-control" type="text" placeholder="Addresses with Balance" value=""/>
+                                            <input class="form-control" type="text" placeholder="First name" value=""/>
                                         </div>
-                                        <h4>Transactions 24h</h4>
-                                        <div class="col-xs-12 form-group">
-                                            <div class="input-group form-group col-xs-12 col-sm-6 pull-left">
-                                                <input class="form-control" type="text" placeholder="Total 24h" value="{{total_txns}}"/>
-                                                <span class="input-group-addon">TXNS</span>
-                                            </div>
-                                            <div class="input-group form-group col-xs-12 col-sm-6 pull-left">
-                                                <input class="form-control" type="text" placeholder="Ave Txn Time" value="{{ave_txn}}"/>
-                                                <span class="input-group-addon">sec</span>
-                                            </div>
+                                        <div class="form-group">
+                                            <input class="form-control" type="text" placeholder="Last name" value=""/>
                                         </div>
-
-                                        <h4>Circulating Supply:  900 million</h4>
-                                        <div class="input-group form-group">
-                                            <input class="form-control" type="text" placeholder="Market Price" value="{{market_price}}"/>
-                                            <span class="input-group-addon">satoshis</span>
+                                        <div class="form-group">
+                                            <input class="form-control" type="text" placeholder="Email address" value=""/>
                                         </div>
                                     </form>
+                                    <p><button class="btn btn-warning">Create Wallet</button></p>
                                 </div>
                             </div>
                         </div>
@@ -171,91 +160,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="exchanges-section text-center">
-                            <h2>EXCHANGES</h2>
-                            <p class="text-center"><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/cryptopia.png" width="40%"></a></p>
-                        </div>
-                        <div class="slide-4">
-                            <div class="container">
-                                <div class="group-content col-xs-12">
-                                    <h3>The FLASH Governance Model</h3>
-                                    <p>FLASH GovNodes are another unique and streamlined feature of FLASH that we think will help keep FLASH as a “low tax” zone for crypto.</p>
-                                    <p>- There will be 101 FLASH GovNodes (Goverance Nodes) operated by FLASH Delegates.These govern the FLASH blockchain.</p>
-                                    <p>- GovNodes are digital assets and software that help administer the FLASH ecosystem.</p></li>
-                                    <p>- They will use special keys to sign a transaction for registering your vote.</p>
-                                    <p>- Donations for the development of FLASH GovNodes will be used for the development of the GovNodes QT wallet feature, which includes the ability to send FLASH transactions with up to 40 bytes of data inside. This data sending feature will also be enabled on the FLASH web wallet.</p>
-                                    <p>Because FLASH is a very simplified and high performance version of Bitcoin/Litecoin, there are relatively few governance matters</p>
-                                    <p>The remaining governance issues are determined via two requirements, depending on the governance task:  51% or 75%,  51/101 (Majority) or 76/101 (Supermajority)</p>
-                                    <ul>
-                                        <li><p>Changing the delegated PoW processor requires Majority</p></li>
-                                        <li><p>Changing the rate and distribution of transaction fees requires Supermajority</p></li>
-                                        <li><p>Major code changes requires Supermajority</p></li>
-                                        <li><p>Set the rate and distribute fees to insert data into the blockchain requires Majority</p></li>
-                                        <li><p>All other proposals require Majority</p></li>
-                                    </ul>
-                                    <p>New proposals can be submitted by any FLASH coin holder, but 10 GovNode votes are required  before posting on the flashcoin.io web site and GovNodes only vote in favor of a proposal, which will need to be proffered by at least 10 votes in favor.  Any proposals that don’t pass within 30 days will be removed.</p>
-                                    <p>A GovNode may be transferred to any other party at will and for any reason, however, it can only vote once on any issue.  It allows secure digital signing to prove ownership of the asset and will be used in the future to migrate to a FLASH wallet that integrates the GovNode.</p>
-                                    <p>For more information or to get a govnode, please email to:  <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io.</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="slide slide-8">
-                            <div class="bg-white">
-                            </div>
-                            <div class="bg-blue">
-                                <div class="container">
-                                    <ul>
-                                        <li class="col-xs-12 col-sm-4 text-center">
-                                            <img src="images/img1-slide8.png" width="140">
-                                            <p>FLASH is a high performance blockchain secured with delegated Electoral Consensus designed for use for private sectors in accounting, loyalty, and many other applications. Legally compliant.</p>
-                                        </li>
-                                        <li class="col-xs-12 col-sm-4  text-center">
-                                            <img src="images/img2-slide8.png" width="140">
-                                            <p>Transact with low fees and confirms in seconds.</p>
-                                            <p><a style="color:#F5F5F5;word-break: break-all;" class="size-22" href="https://github.com/flashcoin-io/">https://github.com/flashcoin-io/</a></p>
-                                        </li>
-                                        <li class="col-xs-12 col-sm-4 text-center">
-                                            <img src="images/img3-slide8.png" width="140">
-                                            <p>
-                                                We welcome developers to try out our system via our web API's to build powerful robust apps today.
-                                            </p>
-                                            <p><a style="color:#F5F5F5" class="size-22" href="assets/docs/FLASHWhitepaper.pdf">Check out our Whitepaper with more information on our API.</a></p>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="slide-10" id="slide-10">
-                            <div class="container text-center">
-                                <h2 class="text-center">Whitepaper</h2>
-                                <p class="tu"><a href="docs/FLASHWhitepaper.pdf"><button>Download our Whitepaper</button></a></p>
-                            </div>
-                        </div>
-                        <div class="road-map">
-                            <div class="container">
-                                <h2 class="text-center">Road Map</h2>
-                                <p class="text-center form-group"><img src="images/roadmap.png"><img class="mobile" src="images/roadmap-mobile.png"></p>
-                                <div class="text" style=" margin-top: 4%;">
-                                    <p>1. We will be offering gov nodes next week.  Please contact <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io</a> for more information.</p>
-                                    <p>2. One engineering team is focused on a major upgrade to the web wallet;</p>
-                                    <ul>
-                                        <li><p>Support for all browsers as well as responsive support for iOS and Android</p></li>
-                                        <li><p>Translation file to enable translation to any language.  Donors have agreed to provide bounties for translators in various languages</p></li>
-                                    </ul>
-                                    <p>3. Support from additional exchanges is in the works.  We are in the compliance department with a major exchange.  Expect to see a licensed exchange partner in every country, which will provide a legal framework for all FLASH users.</p>
-                                    <p>4. We are about to test the ability to add up to 40 bytes of data in FLASH transactions, this can be used for a variety of applications; OTC trading, messaging, etc.</p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <!--<a id="create-wallet-btn" class="btn create-wallet-btn">Get an Account Now with Free Coins</a>-->
-                <footer class="footer col-xs-12">
-                    <div class="container text-center">
-                        <p class="hidden-xs"><img src="assets/images/flag-footer.png" width="" class="m15r" />Flashcoin.io is provided by the Flashcoin Foundation, Liechtenstein. Supported by the FLASH community.</p>
-                    </div>
-                </footer>
             </div>
         </div>
         <script>console.log("load from cache")</script>
