Update content for page

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                             <p>
                                                 We welcome developers to try out our system via our web API's to build powerful robust apps today.
                                             </p>
-                                            <p><a style="color:#F5F5F5" class="size-22" href="assets/docs/FLASHWhitepaper.pdf">Check out our Whitepaper with more information on our API.</a></p>
+                                            <p><a style="color:#F5F5F5" class="size-22" href="docs/FLASHWhitepaper.pdf">Check out our Whitepaper with more information on our API.</a></p>
                                         </li>
                                     </ul>
                                 </div>
