--- a/wallet.html
+++ b/wallet.html
@@ -25,6 +25,7 @@
                             <div class="col-xs-6 pad0">
                                 <div class="col-xs-12 col-sm-5 pad5">
                                     <input id="identifer" type="text" class="validate form-control" placeholder="e-mail address">
+                                    <p><a style="font-size: 15px; color: #fff;" href="#">Forgot password</a></p>
                                 </div>
                                 <div class="col-xs-12 col-sm-5 pad5">
                                     <input id="loginpassword" type="password" class="form-control" placeholder="password">
@@ -49,7 +50,7 @@
                                             <input class="form-control" type="text" placeholder="Email address" value=""/>
                                         </div>
                                     </form>
-                                    <p><button class="btn btn-warning">Create Wallet</button></p>
+                                    <p><button class="btn btn-warning create-wallet">Create Wallet</button></p>
                                 </div>
                             </div>
                         </div>
