Update front page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="wrap">
             <div class="home-page flash-wallet">
-                <p class="link-flash"><a href="https://wallet.flashcoin.io/">FLASH Web Wallet</a></p>
+                <p class="link-flash"><a target="_blank" href="https://wallet.flashcoin.io/">FLASH Web Wallet</a></p>
                 <header class="header">
                     <div class="container" ng-controller="Flashcoin">
                         <div class="col-xs-12">
@@ -253,7 +253,7 @@
                 <!--<a id="create-wallet-btn" class="btn create-wallet-btn">Get an Account Now with Free Coins</a>-->
                 <footer class="footer col-xs-12">
                     <div class="container text-center">
-                        <p class="hidden-xs"><img src="assets/images/flag-footer.png" width="" class="m15r" />Flashcoin.io is provided by the Flashcoin Foundation, Liechtenstein. Supported by the FLASH community.</p>
+                        <p class="hidden-xs">Flashcoin.io is provided by the Flashcoin Foundation, Liechtenstein. Supported by the FLASH community.</p>
                     </div>
                 </footer>
             </div>
