update Address with balance, ave txns

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <div class="box-performation" id="box-performation">
                                     <form class="">
                                         <div class="form-group">
-                                            <input class="form-control" type="text" placeholder="Addresses with Balance" value=""/>
+                                            <input class="form-control" type="text" placeholder="Addresses with Balance" value="{{address_with_balance}}"/>
                                         </div>
                                         <h4>Transactions 24h</h4>
                                         <div class="col-xs-12 form-group">
