--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <a href="https://wallet.flashcoin.io/"><img src="images/flash-wallet.png" /></a>
                             </div>
                             <div class="col-xs-6 text-right">
-                                <p class="link-top"><a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Chart</a></p>
+                                <p class="link-top"><a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a></p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7 text-center pad0 pull-right" id="content-slide1">
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-                <!--<a id="create-wallet-btn" class="btn create-wallet-btn">Get an Account Now with Free Coins</a>-->
+                <a id="create-wallet-btn" class="btn create-wallet-btn" target="_blank" href="https://wallet.flashcoin.io/">Get a web wallet here</a>
                 <footer class="footer col-xs-12">
                     <div class="container text-center">
                         <p class="hidden-xs">Flashcoin.io is provided by the Flashcoin Foundation, Liechtenstein. Supported by the FLASH community.</p>
