Change link discord to https://discord.gg/2nFmMqA

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                             <div class="container content-slide2">
                                 <div class="content col-xs-12">
                                     <div class="col text-center">
-                                        <a title="BTC" href="https://discord.gg/SANek5d" target="_blank"><i class="fa"><img src="images/discord_icon.png"></i></a>
-                                        <h2><a target="_blank" href="https://discord.gg/SANek5d">Discord</a></h2>
+                                        <a title="BTC" href="https://discord.gg/2nFmMqA" target="_blank"><i class="fa"><img src="images/discord_icon.png"></i></a>
+                                        <h2><a target="_blank" href="https://discord.gg/2nFmMqA">Discord</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a title="Facebook" href="https://www.facebook.com/FlashCoin-1800026016723751" target="_blank">
