Update content for The FLASH Governance Model

--- a/index.html
+++ b/index.html
@@ -179,23 +179,16 @@
                             <div class="container">
                                 <div class="group-content col-xs-12">
                                     <h3>The FLASH Governance Model</h3>
-                                    <p>FLASH GovNodes are another unique and streamlined feature of FLASH that we think will help keep FLASH as a “low tax” zone for crypto.</p>
-                                    <p>- There will be 101 FLASH GovNodes (Goverance Nodes) operated by FLASH Delegates.These govern the FLASH blockchain.</p>
-                                    <p>- GovNodes are digital assets and software that help administer the FLASH ecosystem.</p></li>
-                                    <p>- They will use special keys to sign a transaction for registering your vote.</p>
-                                    <p>- Donations for the development of FLASH GovNodes will be used for the development of the GovNodes QT wallet feature, which includes the ability to send FLASH transactions with up to 40 bytes of data inside. This data sending feature will also be enabled on the FLASH web wallet.</p>
-                                    <p>Because FLASH is a very simplified and high performance version of Bitcoin/Litecoin, there are relatively few governance matters</p>
-                                    <p>The remaining governance issues are determined via two requirements, depending on the governance task:  51% or 75%,  51/101 (Majority) or 76/101 (Supermajority)</p>
-                                    <ul>
-                                        <li><p>Changing the delegated PoW processor requires Majority</p></li>
-                                        <li><p>Changing the rate and distribution of transaction fees requires Supermajority</p></li>
-                                        <li><p>Major code changes requires Supermajority</p></li>
-                                        <li><p>Set the rate and distribute fees to insert data into the blockchain requires Majority</p></li>
-                                        <li><p>All other proposals require Majority</p></li>
-                                    </ul>
-                                    <p>New proposals can be submitted by any FLASH coin holder, but 10 GovNode votes are required  before posting on the flashcoin.io web site and GovNodes only vote in favor of a proposal, which will need to be proffered by at least 10 votes in favor.  Any proposals that don’t pass within 30 days will be removed.</p>
-                                    <p>A GovNode may be transferred to any other party at will and for any reason, however, it can only vote once on any issue.  It allows secure digital signing to prove ownership of the asset and will be used in the future to migrate to a FLASH wallet that integrates the GovNode.</p>
-                                    <p>For more information or to get a govnode, please email to:  <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io.</a>
+                                    <p> FLASH GovNodes are another unique and streamlined feature of FLASH that we think will help keep FLASH as a friendly and “low tax” zone for crypto.</p>
+                                    <p>- There will be 151 FLASH GovNodes (Goverance Nodes) operated by FLASH Delegates.  These govern the FLASH blockchain and software.</p>
+                                    <p>- The GovNodes will be operated and administered by a subset of FLASH holders. In order to have the right to run a GovNode, a person will be required to acquire and maintain ownership of, or “stake”, 1,000,000 FLASH,which must remain “staked” for as long as he operates a GovNode.  In addition, a foundation based in Liechtenstein will be responsible for the ongoing development of the GovNodes and the maintenance of the FLASHcoin Software.</p></li>
+                                    <p>- FLASHcoin is a delegated proof of work protocol that enables quicker and more efficient processing of blockchain transactions than other proof of work protocols. The consensus of all the GovNodes randomly assigns the validation of FLASH transactions to a subset of several dozen mining nodes. This allows for quicker processing times than traditional proof of work based protocols, which require a much larger number of mining nodes to validate transactions. Any FLASH holder has the opportunity to operate a mining node and be eligible to participate in the validation of FLASH transactions by staking 10,000,000 FLASH.</p>
+                                    <p>- The GovNodes also assist in the governance of Flashcoin. FLASH holders can propose changes to the Software, governance or transaction fee structure of Flashcoin by posting proposals on the Flashcoin.io website. Proposals can then be nominated for an official vote by receiving at least ten affirmative votes from the GovNodes. If within 30 days of being posted on Flashcoin.io, a proposal receives ten GovNode votes in its favor, the proposal is eligible for a full vote of all the GovNodes. A proposal may then be adopted by an affirmative vote of eithera majority or a supermajority of the GovNodes, depending on the nature of the proposal. Each GovNode is entitled to one vote, which is cast using a special encrypted key allowing for a digital signature that is unique to each GovNode.</p>
+                                    <p>- The GovNodes will serve and be subject to the continuous support of the FLASH holder community. An operator of a GovNode may be removed by the FLASH holders at any time upon a vote of sixty seven percent
+                                        (67%) of all FLASH holders.</p>
+
+                                    <p>A GovNode may be transferred to any other party at will and for any reason, however, it can only vote once on any issue. It allows secure digital signing to prove ownership of the asset and will be used in the future to migrate to a FLASH wallet that integrates the GovNode.</p>
+                                    <p>For more information or to get a GovNode, please email to:  <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io.</a>
                                     </p>
                                 </div>
                             </div>
