Add white paper spanish on flashcoin.io

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <div class="slide-10" id="slide-10">
                             <div class="container text-center">
                                 <h2 class="text-center">Whitepaper</h2>
-                                <p class="tu"><a href="docs/FLASHWhitepaper.pdf"><button>Download our Whitepaper</button></a></p>
+                                <p class="tu"><a href="docs/FLASHWhitepaper.pdf"><button>Download our Whitepaper</button></a><a href="docs/FLASHWhitepaper-en-Espanol.pdf"><button>Whitepaper en Español</button></a></p>
                             </div>
                         </div>
                         <div class="road-map">
