Update new content for footer

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <a id="create-wallet-btn" class="btn create-wallet-btn" target="_blank" href="https://wallet.flashcoin.io/">Get a web wallet here</a>
                 <footer class="footer col-xs-12">
                     <div class="container text-center">
-                        <p class="hidden-xs">Flashcoin.io is provided by the Flashcoin Foundation, Liechtenstein. Supported by the FLASH community.</p>
+                        <p class="hidden-xs">Flashcoin.io is provided by the Third Millennium Foundation for Economics and Culture, Liechtenstein. Supported by the FLASH community.</p>
                     </div>
                 </footer>
             </div>
