changes for the roadmap and minor correction in Governance node description.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="shortcut icon" href="images/favicon.ico" title="Favicon">
         <link rel="dns-prefetch" href="//s.w.org">
         <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
-        <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
         <script type="text/javascript" src="flashcoin.js"></script>
@@ -23,7 +22,7 @@
                                 <a href="https://wallet.flashcoin.io/"><img src="images/flash-wallet.png" /></a>
                             </div>
                             <div class="col-xs-6 text-right">
-                                <p class="link-top"><a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a></p>
+                                <p class="link-top"><a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a> | <a href="https://nodes.flashcoin.io/">Nodes</a></p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7 text-center pad0 pull-right" id="content-slide1">
@@ -184,10 +183,10 @@
                                     <p>- The GovNodes will be operated and administered by a subset of FLASH holders. In order to have the right to run a GovNode, a person will be required to acquire and maintain ownership of, or “stake”, 1,000,000 FLASH,which must remain “staked” for as long as he operates a GovNode.  In addition, a foundation based in Liechtenstein will be responsible for the ongoing development of the GovNodes and the maintenance of the FLASHcoin Software.</p></li>
                                     <p>- FLASHcoin is a delegated proof of work protocol that enables quicker and more efficient processing of blockchain transactions than other proof of work protocols. The consensus of all the GovNodes randomly assigns the validation of FLASH transactions to a subset of several dozen mining nodes. This allows for quicker processing times than traditional proof of work based protocols, which require a much larger number of mining nodes to validate transactions. Any FLASH holder has the opportunity to operate a mining node and be eligible to participate in the validation of FLASH transactions by staking 10,000,000 FLASH.</p>
                                     <p>- The GovNodes also assist in the governance of Flashcoin. FLASH holders can propose changes to the Software, governance or transaction fee structure of Flashcoin by posting proposals on the Flashcoin.io website. Proposals can then be nominated for an official vote by receiving at least ten affirmative votes from the GovNodes. If within 30 days of being posted on Flashcoin.io, a proposal receives ten GovNode votes in its favor, the proposal is eligible for a full vote of all the GovNodes. A proposal may then be adopted by an affirmative vote of eithera majority or a supermajority of the GovNodes, depending on the nature of the proposal. Each GovNode is entitled to one vote, which is cast using a special encrypted key allowing for a digital signature that is unique to each GovNode.</p>
-                                    <p>- The GovNodes will serve and be subject to the continuous support of the FLASH holder community. An operator of a GovNode may be removed by the FLASH holders at any time upon a vote of sixty seven percent
-                                        (67%) of all FLASH holders.</p>
+                                    <!--<p>- The GovNodes will serve and be subject to the continuous support of the FLASH holder community. An operator of a GovNode may be removed by the FLASH holders at any time upon a vote of sixty seven percent
+                                        (67%) of all FLASH holders.</p>!-->
 
-                                    <p>A GovNode may be transferred to any other party at will and for any reason, however, it can only vote once on any issue. It allows secure digital signing to prove ownership of the asset and will be used in the future to migrate to a FLASH wallet that integrates the GovNode.</p>
+                                    <p>- A GovNode may be transferred to any other party at will and for any reason, however, it can only vote once on any issue. It allows secure digital signing to prove ownership of the asset and will be used in the future to migrate to a FLASH wallet that integrates the GovNode.</p>
                                     <p>For more information or to get a GovNode, please email to:  <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io.</a>
                                     </p>
                                 </div>
@@ -228,17 +227,37 @@
                         <div class="road-map">
                             <div class="container">
                                 <h2 class="text-center">Road Map</h2>
-                                <p class="text-center form-group"><img src="images/roadmap.png"><img class="mobile" src="images/roadmap-mobile.png"></p>
-                                <div class="text" style=" margin-top: 4%;">
-                                    <p>1. We will be offering gov nodes next week.  Please contact <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io</a> for more information.</p>
-                                    <p>2. One engineering team is focused on a major upgrade to the web wallet;</p>
-                                    <ul>
-                                        <li><p>Support for all browsers as well as responsive support for iOS and Android</p></li>
-                                        <li><p>Translation file to enable translation to any language.  Donors have agreed to provide bounties for translators in various languages</p></li>
-                                    </ul>
-                                    <p>3. Support from additional exchanges is in the works.  We are in the compliance department with a major exchange.  Expect to see a licensed exchange partner in every country, which will provide a legal framework for all FLASH users.</p>
-                                    <p>4. We are about to test the ability to add up to 40 bytes of data in FLASH transactions, this can be used for a variety of applications; OTC trading, messaging, etc.</p>
-                                </div>
+								<div class="text col-xs-12">
+                                        <p>FLASH is being optimized to support applications in the $1T remittance market. We have exchanges in UAE, India, Mexico and Liechtenstein that have agreed to participate.</p>
+								</div>
+								<div class="text col-xs-12">
+									<p><br>The features are broken into several categories:</p>
+									<p>
+										<ol>
+											<li>FLASH web wallet( FWW ), which will have support for IN WALLET exchange for BTC, BCH and local currency, plus credit card purchase.  Many additional local languages will be added.</li>
+											<li>Blockchain upgrades to make FLASH more stable</li>
+											<li>Remittance applications, including Human ATM and automatic conversion to local fiat.</li>
+											<li>FLASH Merchant services, including consumer payment via FLASH with cash back feature.</li>
+										</ol>
+									</p>
+								</div>
+                                <p class="text-center form-group"><img src="images/flash-roadmap.jpg"><img class="mobile" src="images/flash-roadmap.jpg"></p>
+                                <div class="text col-xs-12">
+									<table class="table table-striped table-hover table-bordered">
+										<thead>
+											<tr> <th class="col-xs-11"><b>Feature</b></th> <th  class="col-xs-1"><b>Release date</b></th></tr>
+										</thead>
+										<tbody>
+											<tr> <td><b>Flash Web Wallet ( FWW ) features</b>: Add 2FA for Txn confirmation, Add QR code scanner, Txn email notifications, Browser notifications, Transact in Flash using cell phone as the identifier</td> <td>Q4, 2017</td></tr>
+											<tr> <td><b>BTC & BCH Support + Stability Improvement</b>: Testnet launch for DPOW & Governance Node, Addition of BTC & BCH to FWW, Add Exchange between FLASH/BTC and FLASH/BCH to FWW, Multiple address support for Flash, BTC, BCH in FWW</td> <td>Q1, 2018</td></tr>
+											<tr> <td><b>Support for Mammoth.li Exchange</b></td> <td>Q1, 2018</td></tr>
+											<tr><td><b>ETH & ERC20 Support + Performance Enhancement</b>: ETH and ERC20 tokens support in FWW, Export of private keys for Flash & others from FWW, Add 2FA for key export confirmation</td><td>Q1, 2018</td></tr>
+											<tr><td><b>Introducing Remittance</b>: Implementation of remittance application to FWW, Import of private keys for Flash & others FWW</td><td>Q1, 2018</td></tr>
+											<tr><td><b>Merchant services + FWW Upgrade</b>: Mainnet launch for DPOW and Governance nodes, Credit card purchase of FLASH/BTC/BCH in FWW, Cold storage of private keys as a service, Add Roving ATM application to FWW, Add Merchant tools to FWW, Inclusion of more cryptocurrencies to FWW</td><td>Q2, 2018</td></tr>
+											<tr><td><b>Flash wallet upgrade</b>: Integrate FWW with regional Exchanges and allow FIAT deposits and withdrawals, Hardware wallet integration to FWW, Integration of Flash proprietary USB container as cold storage to FWW</td><td>TBA</td></tr>
+										</tbody> 
+									</table>
+								</div>
                             </div>
                         </div>
                     </div>
