final roadmap changes on flash landing page

--- a/index.html
+++ b/index.html
@@ -228,16 +228,16 @@
                             <div class="container">
                                 <h2 class="text-center">Road Map</h2>
 								<div class="text col-xs-12">
-                                        <p>FLASH is being optimized to support applications in the $1T remittance market. We have exchanges in UAE, India, Mexico and Liechtenstein that have agreed to participate.</p>
+                                        <p>FLASH is being optimized to support applications in the $1 Trillion remittance market. We have exchanges in UAE, India, Mexico and Liechtenstein that have agreed to participate.</p>
 								</div>
 								<div class="text col-xs-12">
 									<p><br>The features are broken into several categories:</p>
 									<p>
 										<ol>
-											<li>FLASH web wallet( FWW ), which will have support for IN WALLET exchange for BTC, BCH and local currency, plus credit card purchase.  Many additional local languages will be added.</li>
+											<li>FLASH web wallet (FWW), which will have support for credit card purchase and in-wallet exchange for BTC, BCH, and local currency.  Many additional local languages will be added.</li>
 											<li>Blockchain upgrades to make FLASH more stable</li>
-											<li>Remittance applications, including Human ATM and automatic conversion to local fiat.</li>
-											<li>FLASH Merchant services, including consumer payment via FLASH with cash back feature.</li>
+											<li>Remittance applications including Human ATM and automatic conversion to local fiat.</li>
+											<li>FLASH Merchant services including consumer payment via FLASH with cash back feature.</li>
 										</ol>
 									</p>
 								</div>
@@ -248,7 +248,7 @@
 											<tr> <th class="col-xs-11"><b>Feature</b></th> <th  class="col-xs-1"><b>Release date</b></th></tr>
 										</thead>
 										<tbody>
-											<tr> <td><b>Flash Web Wallet ( FWW ) features</b>: Add 2FA for Txn confirmation, Add QR code scanner, Txn email notifications, Browser notifications, Transact in Flash using cell phone as the identifier</td> <td>Q4, 2017</td></tr>
+											<tr> <td><b>Flash Web Wallet (FWW) features</b>: Add 2FA for Txn confirmation, Add QR code scanner, Txn email notifications, Browser notifications, Transact in Flash using cell phone as the identifier</td> <td>Q4, 2017</td></tr>
 											<tr> <td><b>BTC & BCH Support + Stability Improvement</b>: Testnet launch for DPOW & Governance Node, Addition of BTC & BCH to FWW, Add Exchange between FLASH/BTC and FLASH/BCH to FWW, Multiple address support for Flash, BTC, BCH in FWW</td> <td>Q1, 2018</td></tr>
 											<tr> <td><b>Support for Mammoth.li Exchange</b></td> <td>Q1, 2018</td></tr>
 											<tr><td><b>ETH & ERC20 Support + Performance Enhancement</b>: ETH and ERC20 tokens support in FWW, Export of private keys for Flash & others from FWW, Add 2FA for key export confirmation</td><td>Q1, 2018</td></tr>
