final changes to roadmap images + page title and main logo link changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FLASH Wallet</title>
+        <title>FLASH</title>
         <link rel="shortcut icon" href="images/favicon.ico" title="Favicon">
         <link rel="dns-prefetch" href="//s.w.org">
         <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
@@ -19,7 +19,7 @@
                     <div class="container" ng-controller="Flashcoin">
                         <div class="col-xs-12">
                             <div class="col-xs-6 logo">
-                                <a href="https://wallet.flashcoin.io/"><img src="images/flash-wallet.png" /></a>
+                                <a href="https://flashcoin.io/"><img src="images/flash-wallet.png" /></a>
                             </div>
                             <div class="col-xs-6 text-right">
                                 <p class="link-top"><a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a> | <a href="https://nodes.flashcoin.io/">Nodes</a></p>
@@ -241,7 +241,7 @@
 										</ol>
 									</p>
 								</div>
-                                <p class="text-center form-group"><img src="images/flash-roadmap.jpg"><img class="mobile" src="images/flash-roadmap.jpg"></p>
+                                <p class="text-center form-group"><img src="images/flash-roadmap.jpg"><img class="mobile" src="images/flash-roadmap-mobile.jpg"></p>
                                 <div class="text col-xs-12">
 									<table class="table table-striped table-hover table-bordered">
 										<thead>
