minor corrections for features fonts color + mobile responsive fix

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <header class="header">
                     <div class="container" ng-controller="Flashcoin">
                         <div class="col-xs-12">
-                            <div class="col-xs-6 logo">
+                            <div class="col-xs-3 col-sm-6 logo">
                                 <a href="https://flashcoin.io/"><img src="images/flash-wallet.png" /></a>
                             </div>
-                            <div class="col-xs-6 text-right">
+                            <div class="col-xs-9 col-sm-6 text-right">
                                 <p class="link-top"><a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Charts</a> | <a href="https://nodes.flashcoin.io/">Nodes</a></p>
                             </div>
                         </div>
@@ -252,9 +252,9 @@
 											<tr> <td><b>BTC & BCH Support + Stability Improvement</b>: Testnet launch for DPOW & Governance Node, Addition of BTC & BCH to FWW, Add Exchange between FLASH/BTC and FLASH/BCH to FWW, Multiple address support for Flash, BTC, BCH in FWW</td> <td>Q1, 2018</td></tr>
 											<tr> <td><b>Support for Mammoth.li Exchange</b></td> <td>Q1, 2018</td></tr>
 											<tr><td><b>ETH & ERC20 Support + Performance Enhancement</b>: ETH and ERC20 tokens support in FWW, Export of private keys for Flash & others from FWW, Add 2FA for key export confirmation</td><td>Q1, 2018</td></tr>
-											<tr><td><b>Introducing Remittance</b>: Implementation of remittance application to FWW, Import of private keys for Flash & others FWW</td><td>Q1, 2018</td></tr>
+											<tr><td><b>Introducing Remittance</b>: Implementation of remittance application to FWW, Import of private keys for Flash & others in FWW</td><td>Q1, 2018</td></tr>
 											<tr><td><b>Merchant services + FWW Upgrade</b>: Mainnet launch for DPOW and Governance nodes, Credit card purchase of FLASH/BTC/BCH in FWW, Cold storage of private keys as a service, Add Roving ATM application to FWW, Add Merchant tools to FWW, Inclusion of more cryptocurrencies to FWW</td><td>Q2, 2018</td></tr>
-											<tr><td><b>Flash wallet upgrade</b>: Integrate FWW with regional Exchanges and allow FIAT deposits and withdrawals, Hardware wallet integration to FWW, Integration of Flash proprietary USB container as cold storage to FWW</td><td>TBA</td></tr>
+											<tr><td><b>FWW upgrade & Enhancements</b>: Integrate FWW with regional Exchanges and allow FIAT deposits and withdrawals, Hardware wallet integration to FWW, Integration of Flash proprietary USB container as cold storage to FWW</td><td>TBA</td></tr>
 										</tbody> 
 									</table>
 								</div>
